Prevent breaks in list.

--- a/_sass/_base_styling.scss
+++ b/_sass/_base_styling.scss
@@ -520,25 +520,24 @@ p > span {
             
             li {
                 listing-style: none;
-                display: block;
+                display: inline;
                 padding: 0 2rem;
                 font-size: 1.2rem;
                 -webkit-column-break-inside: avoid;
                 page-break-inside: avoid;
                 break-inside: avoid;
+                white-space: nowrap;
                 list-style: none;
+                -moz-column-count: 2;
+                -webkit-column-count: 2;
                 column-count: 2;
+                float: left;
+                margin: 0 auto;
                 
                     @media screen and (min-width: $medium-screen) {
-                        listing-style: none;
-                        display: inline;
                         padding: 0 3.2rem;
                         font-size: 1.4rem;
-                        -webkit-column-break-inside: avoid;
-                        page-break-inside: avoid;
-                        break-inside: avoid;
                         float: none;
-                        margin: 0 auto;
                     }
             }
         }
